--- a/Quiz.Models/Quiz.Models.csproj
+++ b/Quiz.Models/Quiz.Models.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.7" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Quiz.Helpers\Quiz.Helpers.csproj" />
+  </ItemGroup>
   
 </Project>
