--- a/Quiz/appsettings.json
+++ b/Quiz/appsettings.json
@@ -6,7 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "DefaultConnection": "Server=IVELIN-IVANOV\\SQLEXPRESS;Database=Quiz;Trusted_Connection=True;TrustServerCertificate=True"
+  //},
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IVELIN-IVANOV\\SQLEXPRESS;Database=Quiz;Trusted_Connection=True;TrustServerCertificate=True"   
+    "DefaultConnection": "Server=(LocalDB)\\.;Database=Quiz;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
